# notebooklm-toolkit

./: .gitignore  Dockerfile  README.md  app_gui.py  audio_transcriber.py  notebooklm_tab.py  notebooklm_wrapper.py  pdf_cleaner_core.py  pyproject.toml  requirements.txt
src/notebooklm_toolkit/: __init__.py  __main__.py  server.py
src/notebooklm_toolkit/core/: nlm_client.py  pdf_cleaner.py  preflight.py  transcriber.py
src/notebooklm_toolkit/static/: app.js  index.html  style.css
